--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.20.1"
+  },
   "scripts": {
-    "start": "npm run build && node ./src/index.js",
+    "start": "npm run build && node ./build/src/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
     "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build ./src/index.js -s",
-    "build": "npm run clean && npm run build-babel"
+    "build-babel": "babel -d ./build/src/ ./src/ -s",
+    "build": "npm run build-babel"
   },
   "author": "",
   "license": "ISC",
